--- a/index.html
+++ b/index.html
@@ -71,34 +71,36 @@
 
   <!-- Footer con botones de redes sociales -->
   <footer class="mt-auto text-center bg-black bg-opacity-50">
-    <!-- Botones de redes -->
+    <!-- Botones -->
     <div class="py-6 flex justify-center gap-4 flex-wrap">
+      <!-- Facebook -->
       <a class="bg-blue-500/80 hover:bg-blue-600 text-white px-4 py-2 rounded-full flex items-center gap-2 transition duration-300">
-        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="white" viewBox="0 0 24 24">
-          <path d="M22.675 0h-21.35C.6 0 0 .6 0 1.342v21.316C0 23.4.6 24 1.342 24H12.82v-9.294H9.692v-3.622h3.128V8.413c0-3.1 1.894-4.788 4.66-4.788 1.325 0 2.464.098 2.796.142v3.24h-1.918c-1.504 0-1.794.715-1.794 1.76v2.31h3.587l-.467 3.622h-3.12V24h6.116C23.4 24 24 23.4 24 22.658V1.342C24 .6 23.4 0 22.675 0z"/>
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 320 512" fill="white">
+          <path d="M279.14 288l14.22-92.66h-88.91V127.89c0-25.35 12.42-50.06 52.24-50.06H293V6.26S259.43 0 225.36 0C141.09 0 89.53 54.42 89.53 153.71V195.3H0v92.66h89.53V512h107.77V288z"/>
         </svg>
         Facebook
       </a>
 
+      <!-- Instagram -->
       <a class="bg-pink-500/80 hover:bg-pink-600 text-white px-4 py-2 rounded-full flex items-center gap-2 transition duration-300">
-        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="white" viewBox="0 0 24 24">
-          <path d="M12.004 2.163c3.204 0 3.584.012 4.85.07 1.366.062 2.633.33 3.608 1.304.975.975 1.241 2.242 1.304 3.608.058 1.265.07 1.645.07 4.85s-.012 3.584-.07 4.85c-.063 1.366-.33 2.633-1.304 3.608-.975.975-2.242 1.241-3.608 1.304-1.265.058-1.645.07-4.85.07s-3.584-.012-4.85-.07c-1.366-.063-2.633-.33-3.608-1.304-.975-.975-1.241-2.242-1.304-3.608C2.175 15.587 2.163 15.207 2.163 12s.012-3.584.07-4.85c.063-1.366.33-2.633 1.304-3.608.975-.975 2.242-1.241 3.608-1.304C8.42 2.175 8.8 2.163 12.004 2.163zm0 1.837a6.272 6.272 0 1 1 0 12.544 6.272 6.272 0 0 1 0-12.544zm6.406-1.488a1.456 1.456 0 1 1-2.913 0 1.456 1.456 0 0 1 2.913 0z"/>
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 448 512" fill="white">
+          <path d="M224,202.66A53.34,53.34,0,1,0,277.34,256,53.38,53.38,0,0,0,224,202.66ZM398.8,80A48,48,0,0,1,432,113.2c11,26.55,16,64.42,16,142.8s-5,116.25-16,142.8A48,48,0,0,1,398.8,432c-26.55,11-64.42,16-142.8,16s-116.25-5-142.8-16A48,48,0,0,1,48,398.8c-11-26.55-16-64.42-16-142.8S37,139.75,48,113.2A48,48,0,0,1,81.2,80C107.75,69,145.62,64,224,64S340.25,69,366.8,80ZM224,338a82,82,0,1,1,82-82A82.09,82.09,0,0,1,224,338ZM352,160a24,24,0,1,1-24-24A24,24,0,0,1,352,160Z"/>
         </svg>
         Instagram
       </a>
 
+      <!-- WhatsApp -->
       <a class="bg-green-500/80 hover:bg-green-600 text-white px-4 py-2 rounded-full flex items-center gap-2 transition duration-300">
-        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="white" viewBox="0 0 24 24">
-          <path d="M20.52 3.48a12 12 0 1 0 0 17.04 12 12 0 0 0 0-17.04ZM12 22C6.48 22 2 17.52 2 12a9.95 9.95 0 0 1 1.57-5.35l3.55 3.56v.01A6.3 6.3 0 0 0 7 12c0 2.75 2.25 5 5 5 1.09 0 2.09-.35 2.9-.94l3.57 3.56A9.98 9.98 0 0 1 12 22Z"/>
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 448 512" fill="white">
+          <path d="M380.9 97.1C339-3.1 224.5-25.4 136.7 24.3S-1.4 218.9 39.2 311.6L2.3 437.4c-4.5 15.2 9.4 28.6 24.5 24.1l125.8-36.8c92.8 40.6 200.6-2.5 241.3-94.7 40.6-92.8-2.6-200.6-94.7-241.3zM224 366.7c-79 0-143.4-64.4-143.4-143.4S145 80 224 80s143.4 64.4 143.4 143.4S303 366.7 224 366.7zm76.3-108.3-23.7-6.7c-3.2-.9-6.7.1-9 2.4l-10.6 10.8c-29.5-15.6-48.2-33.5-63.8-63.8l10.8-10.6c2.3-2.3 3.3-5.8 2.4-9l-6.7-23.7c-1.3-4.7-5.7-7.9-10.5-7.9h-21.4c-6.2 0-11.4 5.2-10.8 11.4 6.5 71.9 61.3 126.7 133.2 133.2 6.2.6 11.4-4.6 11.4-10.8v-21.4c0-4.9-3.2-9.3-7.9-10.5z"/>
         </svg>
         WhatsApp
       </a>
     </div>
 
-    <!-- Texto legal -->
+    <!-- Copyright -->
     <p class="text-xs text-gray-300 pb-4">&copy; 2025 Vegas de Breña Alta. Todos los derechos reservados.</p>
   </footer>
 
 </body>
 </html>
-
