--- a/contacto.html
+++ b/contacto.html
@@ -52,6 +52,7 @@
         <a href="nosotros.html" class="hover:text-green-300">Nosotros</a>
         <a href="productos.html" class="hover:text-green-300">Productos</a>
         <a href="galeria.html" class="hover:text-green-300">Galería</a>
+        <a href="galeria.html" class="hover:text-green-300">Detras del puro</a>
         <a href="contacto.html" class="text-green-300 font-semibold">Contacto</a>
       </nav>
     </div>
