--- a/galeria.html
+++ b/galeria.html
@@ -55,6 +55,7 @@
         <a href="nosotros.html" class="hover:text-green-300">Nosotros</a>
         <a href="productos.html" class="hover:text-green-300">Productos</a>
         <a href="galeria.html" class="text-green-300 font-semibold">Galería</a>
+        <a href="galeria.html" class="hover:text-green-300">Detras del Puro</a>
         <a href="contacto.html" class="hover:text-green-300">Contacto</a>
       </nav>
     </div>
