--- a/productos.html
+++ b/productos.html
@@ -52,6 +52,7 @@
         <a href="nosotros.html" class="hover:text-green-300">Nosotros</a>
         <a href="productos.html" class="text-green-300 font-semibold">Productos</a>
         <a href="galeria.html" class="hover:text-green-300">Galería</a>
+        <a href="galeria.html" class="hover:text-green-300">Detras del Puro</a>
         <a href="contacto.html" class="hover:text-green-300">Contacto</a>
       </nav>
     </div>
