--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <a href="nosotros.html" class="hover:text-green-300">Nosotros</a>
         <a href="productos.html" class="hover:text-green-300">Productos</a>
         <a href="galeria.html" class="hover:text-green-300">Galería</a>
-        <a href="galeria.html" class="hover:text-green-300">Detras del Puro</a>
+        <a href="videos.html" class="hover:text-green-300">Detras del Puro</a>
         <a href="contacto.html" class="hover:text-green-300">Contacto</a>
       </nav>
     </div>
