--- a/videos.html
+++ b/videos.html
@@ -15,7 +15,7 @@
     }
 
     body {
-      background-image: url('images/hero-vegas.jpg');
+      background-image: url('images/fondo-videos.jpg');
       background-size: cover;
       background-position: center;
       background-attachment: fixed;
