--- a/videos.html
+++ b/videos.html
@@ -15,12 +15,11 @@
     }
 
     body {
-      background-image: url('images/fondo-videos.jpg');
+      background-image: url('images/hero-vegas.jpg');
       background-size: cover;
       background-position: center;
       background-attachment: fixed;
       background-repeat: no-repeat;
-      background-color: black;
     }
 
     .titulo {
@@ -52,14 +51,14 @@
         <a href="nosotros.html" class="hover:text-green-300">Nosotros</a>
         <a href="productos.html" class="hover:text-green-300">Productos</a>
         <a href="galeria.html" class="hover:text-green-300">Galería</a>
-        <a href="videos.html" class="text-green-300 font-semibold">Detras del Puro</a>
+        <a href="videos.html" class="text-green-300 font-semibold">Detrás del Puro</a>
         <a href="contacto.html" class="hover:text-green-300">Contacto</a>
       </nav>
     </div>
   </header>
 
- <!-- Título -->
-  <section class="text-center px-4 py-10 bg-black bg-opacity-60 backdrop-blur">
+  <!-- Título sin fondo oscuro -->
+  <section class="text-center px-4 py-10">
     <h2 class="text-4xl font-semibold text-green-300 mb-4">Detrás del Puro</h2>
     <p class="max-w-2xl mx-auto text-gray-300">
       Explora nuestro contenido en video sobre la tradición tabacalera, curiosidades y el proceso artesanal de nuestros puros.
