--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
         <a href="nosotros.html" class="hover:text-green-300">Nosotros</a>
         <a href="productos.html" class="hover:text-green-300">Productos</a>
         <a href="galeria.html" class="hover:text-green-300">Galería</a>
+        <a href="videos.html" class="hover:text-green-300">Detras del Puro</a>
         <a href="contacto.html" class="hover:text-green-300">Contacto</a>
       </nav>
     </div>
@@ -72,6 +73,7 @@
       <a href="nosotros.html" class="block hover:text-green-300">Nosotros</a>
       <a href="productos.html" class="block hover:text-green-300">Productos</a>
       <a href="galeria.html" class="block hover:text-green-300">Galería</a>
+      <a href="videos.html" class="hover:text-green-300">Detras del Puro</a>
       <a href="contacto.html" class="block hover:text-green-300">Contacto</a>
     </div>
   </header>
