--- a/productos.html
+++ b/productos.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="es" x-data="{ open: false }">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vegas de Breña Alta</title>
+  <title>Vegas de Breña Alta - Productos</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700&family=Lora&display=swap" rel="stylesheet" />
@@ -13,7 +14,6 @@
     html {
       scroll-behavior: smooth;
     }
-
     body {
       background-image: url('images/fondo-productos.jpg');
       background-size: cover;
@@ -22,19 +22,15 @@
       background-repeat: no-repeat;
       background-color: black;
     }
-
     .titulo {
       font-family: 'Playfair Display', serif;
     }
-
     .parrafo {
       font-family: 'Lora', serif;
     }
-
     .fade-in {
       animation: fadeIn 0.8s ease-in;
     }
-
     @keyframes fadeIn {
       from { opacity: 0; transform: translateY(20px); }
       to { opacity: 1; transform: translateY(0); }
@@ -43,21 +39,33 @@
 </head>
 <body class="fade-in text-gray-100 min-h-screen flex flex-col">
 
-  <!-- Header de navegación -->
-  <header id="main-header" class="bg-black bg-opacity-60 backdrop-blur sticky top-0 z-50 transition-all duration-300 shadow-md">
-    <div class="max-w-7xl mx-auto px-4 py-4 flex flex-col sm:flex-row justify-between items-center gap-2">
+  <!-- Header con menú plegable -->
+  <header class="bg-black bg-opacity-60 backdrop-blur sticky top-0 z-50 shadow-md">
+    <div class="max-w-7xl mx-auto px-4 py-4 flex justify-between items-center">
       <h1 class="text-xl sm:text-2xl font-bold text-green-200">Vegas de Breña Alta</h1>
-      <nav class="flex flex-wrap justify-center gap-3 text-gray-200">
+      <button @click="open = !open" class="sm:hidden text-gray-200 focus:outline-none">
+        <svg class="w-6 h-6" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+          <path x-show="!open" stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 12h16M4 18h16"/>
+        </svg>
+      </button>
+      <nav class="hidden sm:flex space-x-4 text-gray-200">
         <a href="index.html" class="hover:text-green-300">Inicio</a>
         <a href="nosotros.html" class="hover:text-green-300">Nosotros</a>
         <a href="productos.html" class="text-green-300 font-semibold">Productos</a>
         <a href="galeria.html" class="hover:text-green-300">Galería</a>
-        <a href="videos.html" class="hover:text-green-300">Detras del Puro</a>
+        <a href="videos.html" class="hover:text-green-300">Detrás del Puro</a>
         <a href="contacto.html" class="hover:text-green-300">Contacto</a>
       </nav>
     </div>
+    <div x-show="open" class="sm:hidden px-4 pb-4 space-y-2 text-center text-gray-200 transition-all duration-300">
+      <a href="index.html" class="block hover:text-green-300">Inicio</a>
+      <a href="nosotros.html" class="block hover:text-green-300">Nosotros</a>
+      <a href="productos.html" class="block text-green-300 font-semibold">Productos</a>
+      <a href="galeria.html" class="block hover:text-green-300">Galería</a>
+      <a href="videos.html" class="block hover:text-green-300">Detrás del Puro</a>
+      <a href="contacto.html" class="block hover:text-green-300">Contacto</a>
+    </div>
   </header>
-  <div class="h-24"></div>
 
   <section class="text-center py-10 px-4">
     <h2 class="text-3xl sm:text-4xl font-bold text-green-200 drop-shadow-md">Nuestros Tabacos Artesanales</h2>
