--- a/nosotros.html
+++ b/nosotros.html
@@ -43,28 +43,29 @@
 </head>
 <body class="fade-in text-gray-100 min-h-screen flex flex-col">
 
-  <!-- Header de navegación con menú hamburguesa -->
+  <!-- Header de navegación original + hamburguesa -->
   <header id="main-header" class="bg-black bg-opacity-60 backdrop-blur sticky top-0 z-50 transition-all duration-300 shadow-md">
-    <div class="max-w-7xl mx-auto px-4 py-4 flex justify-between items-center">
-      <h1 class="text-xl sm:text-2xl font-bold text-green-200">Vegas de Breña Alta</h1>
+    <div class="max-w-7xl mx-auto px-4 py-4 flex flex-col sm:flex-row justify-between items-center gap-2">
+      <div class="flex justify-between w-full sm:w-auto items-center">
+        <h1 class="text-xl sm:text-2xl font-bold text-green-200">Vegas de Breña Alta</h1>
+        <!-- Botón hamburguesa -->
+        <button id="menu-btn" class="sm:hidden text-green-200 focus:outline-none" aria-label="Abrir menú">
+          <svg class="w-8 h-8" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 12h16M4 18h16" />
+          </svg>
+        </button>
+      </div>
 
-      <!-- Botón hamburguesa -->
-      <button id="menu-btn" class="sm:hidden text-green-200 focus:outline-none" aria-label="Abrir menú">
-        <svg class="w-8 h-8" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
-          <path stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 12h16M4 18h16" />
-        </svg>
-      </button>
+      <!-- Menú de navegación -->
+      <nav id="menu" class="hidden sm:flex flex-col sm:flex-row justify-center gap-3 text-gray-200 text-sm sm:text-base w-full sm:w-auto mt-2 sm:mt-0">
+        <a href="index.html" class="hover:text-green-300">Inicio</a>
+        <a href="nosotros.html" class="text-green-300 font-semibold">Nosotros</a>
+        <a href="productos.html" class="hover:text-green-300">Productos</a>
+        <a href="galeria.html" class="hover:text-green-300">Galería</a>
+        <a href="videos.html" class="hover:text-green-300">Detrás del Puro</a>
+        <a href="contacto.html" class="hover:text-green-300">Contacto</a>
+      </nav>
     </div>
-
-    <!-- Menú de navegación -->
-    <nav id="menu" class="hidden sm:flex flex-col sm:flex-row justify-center items-center gap-3 text-gray-200 text-sm sm:text-base pb-4 sm:pb-0">
-      <a href="index.html" class="hover:text-green-300">Inicio</a>
-      <a href="nosotros.html" class="text-green-300 font-semibold">Nosotros</a>
-      <a href="productos.html" class="hover:text-green-300">Productos</a>
-      <a href="galeria.html" class="hover:text-green-300">Galería</a>
-      <a href="videos.html" class="hover:text-green-300">Detrás del Puro</a>
-      <a href="contacto.html" class="hover:text-green-300">Contacto</a>
-    </nav>
   </header>
 
   <!-- Contenido principal -->
@@ -85,7 +86,7 @@
     <p class="text-sm text-gray-400">&copy; 2025 Vegas de Breña Alta. Todos los derechos reservados.</p>
   </footer>
 
-  <!-- Script para mostrar/ocultar menú en móviles -->
+  <!-- Script hamburguesa -->
   <script>
     const menuBtn = document.getElementById('menu-btn');
     const menu = document.getElementById('menu');
