--- a/videos.html
+++ b/videos.html
@@ -51,17 +51,16 @@
       <button id="menu-btn" class="text-green-300 text-3xl sm:hidden focus:outline-none">
         &#9776;
       </button>
-
-      <!-- Menú de navegación -->
-      <nav id="menu" class="hidden sm:flex flex-col sm:flex-row sm:items-center gap-3 text-gray-200 sm:static absolute top-full left-0 w-full bg-black bg-opacity-90 sm:bg-transparent p-4 sm:p-0 transition-all duration-300 ease-in-out">
-        <a href="index.html" class="hover:text-green-300">Inicio</a>
-        <a href="nosotros.html" class="hover:text-green-300">Nosotros</a>
-        <a href="productos.html" class="hover:text-green-300">Productos</a>
-        <a href="galeria.html" class="hover:text-green-300">Galería</a>
-        <a href="videos.html" class="text-green-300 font-semibold">Detrás del Puro</a>
-        <a href="contacto.html" class="hover:text-green-300">Contacto</a>
-      </nav>
     </div>
+    <!-- Menú de navegación -->
+    <nav id="menu" class="hidden sm:flex flex-col sm:flex-row sm:items-center gap-3 text-gray-200 bg-black bg-opacity-90 sm:bg-transparent p-4 sm:p-0 transition-all duration-300 ease-in-out">
+      <a href="index.html" class="hover:text-green-300">Inicio</a>
+      <a href="nosotros.html" class="hover:text-green-300">Nosotros</a>
+      <a href="productos.html" class="hover:text-green-300">Productos</a>
+      <a href="galeria.html" class="hover:text-green-300">Galería</a>
+      <a href="videos.html" class="text-green-300 font-semibold">Detrás del Puro</a>
+      <a href="contacto.html" class="hover:text-green-300">Contacto</a>
+    </nav>
   </header>
 
   <!-- Título -->
@@ -74,8 +73,15 @@
 
   <!-- Galería de videos -->
   <section class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 p-6 max-w-7xl mx-auto">
-    <!-- Aquí irían los 10 videos como antes -->
-    <!-- [...] -->
+    <!-- Video thumbnails automáticos -->
+    ${[...Array(10)].map((_, i) => `
+    <div class="cursor-pointer group" onclick="openModal('videos/video${i + 1}.mp4')">
+      <video class="rounded-lg shadow-lg group-hover:opacity-80 transition duration-300" muted>
+        <source src="videos/video${i + 1}.mp4" type="video/mp4">
+        Tu navegador no soporta la etiqueta de video.
+      </video>
+      <p class="mt-2 text-center text-green-300 font-medium">Video ${i + 1}</p>
+    </div>`).join('')}
   </section>
 
   <!-- Modal para reproducir videos -->
